# gatekeeper

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
action/: action.yml  poll.sh  trigger.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/gatekeeper/: __init__.py  main.py  settings.py
backend/src/gatekeeper/adapters/: base_types.py  factory.py
backend/src/gatekeeper/adapters/registry/: base.py  local.py  mlflow.py  none.py  s3.py  sagemaker.py
backend/src/gatekeeper/adapters/serving/: base.py  custom_http.py  none.py  openai_compatible.py  proxy.py  torchserve.py
backend/src/gatekeeper/api/v1/: pipeline.py  proxy.py  schemas.py
backend/src/gatekeeper/core/: database.py
backend/src/gatekeeper/dataset_formats/: csv.py  jsonl.py  parquet.py
backend/src/gatekeeper/drift_methods/: ks.py  psi.py
backend/src/gatekeeper/evaluators/: accuracy.py  champion_challenger.py  drift.py  latency.py  llm_judge.py
backend/src/gatekeeper/inference/: offline.py
backend/src/gatekeeper/inference_encodings/: json_encoding.py
backend/src/gatekeeper/judge_modalities/: text.py
backend/src/gatekeeper/model_types/: llm.py  pytorch.py
backend/src/gatekeeper/orm/: __init__.py  audit_log.py  base.py  canary_snapshot.py  gate_result.py  pipeline_run.py
backend/src/gatekeeper/registries/: __init__.py  dataset_format.py  drift_method.py  evaluator.py  inference_encoding.py  judge_modality.py  loader.py  model_type.py
backend/src/gatekeeper/services/: canary.py  eval_engine.py  gate_engine.py
backend/tests/: conftest.py  test_adapters.py  test_api_responses.py  test_benchmark.py  test_canary.py  test_dataset_loaders.py  test_drift_methods.py  test_e2e_pipeline.py  test_eval_engine.py  test_gate_engine.py  test_offline_inference.py  test_perf.py  test_registries.py  test_serving_adapters.py  test_trigger.py
backend/tests/fixtures/: eval.csv  eval.jsonl
config/: server.yaml
demo/: gatekeeper_story2.yaml  generate_data.py  mock_model.py  run.sh
docs/: adapters.md  async-architecture.md  deployment.md  gatekeeper-yaml.md  getting-started.md  github-action.md  how-it-works.md  plugins.md  server-yaml.md  ui.md
examples/pattern-a-offline-only/: gatekeeper.yaml  run.sh
examples/pattern-b-online-only/: gatekeeper.yaml  run.sh
examples/pattern-c-chained/: gatekeeper.yaml  run.sh
examples/pattern-d-custom-evaluator/: gatekeeper.yaml  run.sh
examples/pattern-d-custom-evaluator/my_custom_eval/: evaluators.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CanaryChart.tsx  (+3 more)
(+4 files in other folders)
