[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-custom-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."gatekeeper.evaluators"]
word_count = "my_custom_eval.evaluators:WordCountEvaluator"

[tool.hatch.build.targets.wheel]
packages = ["my_custom_eval"]
